#ifndef STUDENT_H
#define STUDENT_H

#include <string>

struct Student {
    int id;
    std::string name;
    double grade;
    bool gradeAssigned;
};

#endif
